[project]
name = "sflizer"
version = "1.0.4"
description = "SFLizer Streamlit App (POS + Lemmatization + KWIC + SFL Mapping)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "PyPDF2==3.0.1",
    "spacy==3.7.5",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz",
    "thinc==8.2.4",
    "streamlit>=1.35"
]

# Uncomment if you build this as a package (not needed for Streamlit Cloud)
#[build-system]
#requires = ["setuptools>=61", "wheel"]
#build-backend = "setuptools.build_meta"
